Ignore return rubocop warnings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,10 @@ Style/Alias:
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#alias-method'
   Enabled: false
 
+Style/RedundantReturn:
+  Description: 'Redundant `return` detected. '
+  Enabled: false
+
 Style/ArrayJoin:
   Description: 'Use Array#join instead of Array#*.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#array-join'
