--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: fwuensch <fwuensch@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2016/09/21 14:58:27 by jrameau           #+#    #+#              #
-#    Updated: 2018/12/10 19:56:10 by fwuensch         ###   ########.fr        #
+#    Created: 2016/09/21 14:58:27 by fwuensch          #+#    #+#              #
+#    Updated: 2019/02/10 17:22:19 by fwuensch         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
